tests/parser/errors/trait.ray
trait {}
trait Foo 
trait Foo {
    var a = 1
}
trait Foo {
    impl Bar {}
}
